# voice_assistant

./: .gitignore  Dockerfile  README.md  en  pyproject.toml  requirements.txt
scripts/: download_model.py
src/: main.py
src/api/: routes.py
src/core/: config.py
src/schemas/: request_response.py
src/services/: llm_service.py  stt_service.py  tts_service.py  tts_service_ms.py  tts_service_new.py
